# hellfire

./: .gitattributes  .gitignore  CG - Final Assignment - Evaluation Form.xlsx  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  final_assignment.sln  imgui.ini
DCraft/: CMakeLists.txt
DCraft/docs/: datastructures.md  scene_management.md
DCraft/include/: DCraft.h
DCraft/include/DCraft/: Application.h
DCraft/include/DCraft/Addons/: AnimationSystem.h  Asset.h  CameraFactory.h  Cameras.h  ImportedModel3D.h  ModelLoader.h  PerspectiveCamera.h  SceneManager.h
DCraft/include/DCraft/Components/: CameraComponent.h  InstancedRenderableComponent.h  LightComponent.h  RenderableComponent.h  ScriptComponent.h  TransformComponent.h
DCraft/include/DCraft/Editor/: SceneEditorOverlay.h  SceneHierarchyPanel.h
DCraft/include/DCraft/Graphics/: Mesh.h  Model.h  Renderer.h  RendererContext.h  RenderingUtils.h  Shader.h  Vertex.h
DCraft/include/DCraft/Structs/: Camera.h  Component.h  Entity.h  Object3D.h  Scene.h  Transform3D.h
DCraft/include/DCraft/Utility/: ObjectDeserializer.h  ObjectSerializer.h
DCraft/src/: Application.cpp
DCraft/src/Addons/: AnimationSystem.cpp  ModelLoader.cpp
DCraft/src/Cameras/: Camera.cpp  PerspectiveCamera.cpp
DCraft/src/Components/: ScriptComponent.cpp
DCraft/src/Core/: Object3D.cpp  SceneManager.cpp
DCraft/src/Core/Graphics/: Material.cpp  Mesh.cpp  Renderer.cpp  Transform3D.cpp
DCraft/src/Editor/: SceneEditorOverlay.cpp  SceneHierarchyPanel.cpp
DCraft/src/Editor/Commands/: RemoveObjectCommand.cpp
DCraft/src/Objects/: Scene.cpp  Skybox.cpp  SkyboxRenderer.cpp
DCraft/src/Structs/: Entity.cpp
DCraft/src/Utility/: MaterialSerializer.cpp  ObjectDeserializer.cpp  ObjectSerializer.cpp
Editor/: CMakeLists.txt  Tested.hfscene  Untitleadddad.hfscene  Untitled.hfscene
Editor/assets/scenes/: Minecraft.hfscene  Test.hfscene
Editor/assets/shaders/: lambert.frag  phong.frag  standard.vert
Editor/assets/shaders/common/: light_uniforms.glsl
Editor/assets/shaders/lighting/: blinn_phong.glsl
Editor/include/: CoreEditorPlugin.h  CoreEditorStyles.h  EditorComponent.h  EditorPlugin.h  MenuBarComponent.h  SceneHierarchyComponent.h
Editor/include/Scenes/: DefaultScene.h  RotateScript.h
Editor/src/: CoreEditorPlugin.cpp  CoreEditorPlugin.h  CoreEditorStyles.cpp  EditorPlugin.cpp  EditorPlugin.h  MenuBarComponent.cpp  SceneHierarchyComponent.cpp  main.cpp
Editor/src/Scenes/: DefaultScene.h  RotateScript.h
Editor/src/UI/: ui.h
Editor/src/UI/Components/: EditorComponent.h  SceneHierarchyComponent.cpp  SceneHierarchyComponent.h  ViewportComponent.cpp  (+1 more)
Engine/: CMakeLists.txt
Engine/include/DCraft/: Application.h  IWindow.h
Engine/src/: Application.cpp  hellfire-core.h
Engine/src/Addons/: CameraFactory.cpp  ModelLoader.cpp
Engine/src/Components/: CameraComponent.cpp  ScriptComponent.cpp
Engine/src/Core/: SceneManager.cpp
Engine/src/Objects/: Scene.cpp  Skybox.cpp  SkyboxRenderer.cpp
Engine/src/Structs/: Entity.cpp
Engine/src/Utility/: FileDialog.cpp  MaterialSerializer.cpp  ObjectDeserializer.cpp  ObjectSerializer.cpp  ServiceLocator.cpp  TextureUtils.cpp
Engine/src/Window/: GLFWWindow.cpp
Engine/src/hellfire/: EntryPoint.h
Sandbox/: CMakeLists.txt  editorconfig.ini  imgui.ini
Sandbox/assets/Shaders/: instanced.frag  instanced.vert  skybox.frag
Sandbox/assets/models/: Plane.mtl  high_def_sphere.mtl  low_poly_well.glb  low_poly_well.mtl  test_for_game_engine_monkey.mtl
Sandbox/assets/scenes/: Example Scene.json  Test Scene.json
Sandbox/assets/shaders/: fragmentshader.frag  instanced.frag  lambert.frag  phong.frag  skybox.frag  skybox.vert  vertexshader.vert
Sandbox/include/: Game.h
Sandbox/include/Objects/: DisplayCase.hpp
Sandbox/include/Scenes/: HubScene.h  SandboxScene.h  SolarSystemScene.h  SponzaScene.h
Sandbox/include/Scripts/: OrbitController.h  OrbitalController.h  PlayerController.h
Sandbox/include/Utils/: AsteroidBeltFactory.h  InputHandler.h
Sandbox/src/: Game.cpp  GamePlugin.cpp  InputHandler.cpp  main.cpp
Sandbox/src/Objects/: DisplayCase.cpp
Sandbox/src/Scenes/: HubScene.cpp  SanboxScene.cpp  SolarSystemScene.cpp  SponzaScene.cpp
Sandbox/src/Scripts/: OrbitController.cpp  PlayerController.cpp
Sandbox/src/Utils/: AnimationInputHandler.cpp  AsteroidBeltFactory.cpp
editor/: CMakeLists.txt  Untitsssasled.hfscene  imgui.ini
editor/assets/layouts/: default.ini
editor/assets/shaders/: instanced.frag  phong.frag  shadow.frag  shadow.vert  standard.vert
editor/src/: CoreEditorStyles.cpp  EditorApplication.cpp  EditorApplication.h  main.cpp
editor/src/Events/: StateEvents.h  WindowEvents.h
editor/src/Project/: ProjectManager.cpp  ProjectManager.h
editor/src/Scenes/: DefaultScene.h
editor/src/Serializers/: ProjectManagerSerializer.h
editor/src/UI/: ui.h
editor/src/core/: ApplicationState.h  EditorApplication.cpp  EditorApplication.h  StateManager.h
editor/src/events/: StateEvents.h  WindowEvents.h
editor/src/project/: ProjectManager.cpp  ProjectManager.h
editor/src/scenes/: DefaultScene.h  RotateScript.h
editor/src/serializers/: ProjectManagerSerializer.h
editor/src/ui/: EventBus.h  PanelManager.h
editor/src/utilities/: MoveOnlyFunction.h
sandbox/: CMakeLists.txt
sandbox/assets/models/: Asteroid_crystal.mtl  Asteroid_less_rocky.mtl
sandbox/assets/scenes/: Terrain Scene.json
sandbox/assets/shaders/: phong.frag  test.frag
sandbox/include/: GamePlugin.h
sandbox/include/Scenes/: SponzaScene.h
sandbox/include/Scripts/: PlayerController.h
sandbox/include/Utils/: AnimationInputHandler.h  AsteroidBeltFactory.h
sandbox/src/: GamePlugin.cpp  main.cpp
sandbox/src/Scenes/: SolarSystemScene.cpp  SponzaScene.cpp
sandbox/src/Scripts/: OrbitController.cpp  PlayerController.cpp
sandbox/src/Utils/: AnimationInputHandler.cpp
tests/: CMakeLists.txt  main_test.cpp
tests/scene/: test_scene.cpp
tests/ui/: UITestHarness.cpp  UITestHarness.h  main.cpp
tests/ui/tests/: ProjectCreatorTests.h
tests/unit/serializers/: test_transform_serializer.cpp
(+453 files in other folders)
